<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBlack">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/connection_text"
                    android:layout_width="333dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:textColor="@color/textWhite"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <ImageButton
                    android:id="@+id/connection_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/connection_yellow"
                    android:src="@drawable/connection_text_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/subBlack"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/hearing_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:text="@string/sound_around"
                    android:textColor="@color/textWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/not_connect_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/not_connect_image"
                    app:srcCompat="@drawable/not_connect" />

                <TextView
                    android:id="@+id/sound_around_text"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:textColor="@color/textWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@color/subBlack"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/timeline_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:text="@string/timeline_state"
                    android:textColor="@color/textWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/timeline_clock"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/not_connect_image"
                    android:src="@drawable/timeline_clock" />

                <TextView
                    android:id="@+id/timeline_text"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/timeline_text"
                    android:textColor="@color/textWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>